# memory-vault

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  launch-tui.bat  launch-tui.sh  pyproject.toml
.github/workflows/: ci.yml  test.yml
docs/: ARCHITECTURE.md
src/memory_vault/: __init__.py  __main__.py
src/memory_vault/cli/: __init__.py  main.py
src/memory_vault/core/: __init__.py  builder.py  config.py  llm.py  manifest.py  narrator.py  pack.py  renderer.py  session_index.py  tui.py
tests/: test_llm.py  test_pack.py  test_session_index.py
